--- a/WpfControlLibrary3/UserControl1.xaml
+++ b/WpfControlLibrary3/UserControl1.xaml
@@ -1,14 +1,10 @@
-﻿<UserControl x:Class="WpfControlLibrary2.UserControl1"
+﻿<UserControl x:Class="WpfControlLibrary3.UserControl1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfControlLibrary2"
-             mc:Ignorable="d"  x:Name="Main" >
-    <UserControl.Resources>
-       
-    </UserControl.Resources>
-
+             xmlns:local="clr-namespace:WpfControlLibrary3"
+             mc:Ignorable="d"              >
     <Grid>
 
         <Grid.RowDefinitions>
@@ -24,19 +20,18 @@
             </Grid.ColumnDefinitions>
             <Image Grid.Column="0" x:Name="image_file"/>
             <ProgressBar Grid.Column="1" x:Name="status_progress">
-              
+
             </ProgressBar>
             <Button Grid.Column="2" HorizontalAlignment="Left" Width="26"/>
+            <Button x:Name="btn_checking" Grid.Column="3" Click="Button_Click" Content=". . .">
 
-            <Button x:Name="btn_checking" Grid.Column="3" Click="Button_Click" Content=". . .">                
-                
-               
+
             </Button>
 
         </Grid>
 
         <Grid Grid.Row="1" Height="100">
-            <Grid.Style>
+            <!--<Grid.Style>
                 <Style>
                     <Style.Triggers>
 
@@ -63,26 +58,21 @@
                         </MultiDataTrigger>
                     </Style.Triggers>
                 </Style>
-            </Grid.Style>
-            
+            </Grid.Style>-->
+
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Content="Откуда" HorizontalAlignment="Center"/>
-            
+
             <Grid Grid.Row="1" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label x:Name="label_ip_from" Grid.Column="0" HorizontalAlignment="Left" Width="95" Content="{Binding Path=Ip_From}"/>
-                <Label x:Name="label_path_from" HorizontalAlignment="Left" Grid.Column="1" Width="205" Content="{Binding Path=Path_From}"/>                
             </Grid>
-            
-            <Label Grid.Row="2" Content="Куда" HorizontalAlignment="Center"/>
             <Grid Grid.Row="3" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
