--- a/WpfControlLibrary3/UserControl1.xaml
+++ b/WpfControlLibrary3/UserControl1.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="WpfControlLibrary3.UserControl1"
+﻿<UserControl xmlns:WpfControlLibrary2="clr-namespace:WpfControlLibrary2;assembly=WpfControlLibrary3"  x:Class="WpfControlLibrary3.UserControl1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfControlLibrary3"
              mc:Ignorable="d"              >
-    <Grid>
+    <Grid> 
 
         <Grid.RowDefinitions>
             <RowDefinition Height="26"/>
@@ -13,55 +13,27 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="26"/>
+                <ColumnDefinition Width="0"/>
                 <ColumnDefinition Width="174"/>
                 <ColumnDefinition Width="50"/>
                 <ColumnDefinition Width="50"/>
-            </Grid.ColumnDefinitions>
-            <Image Grid.Column="0" x:Name="image_file"/>
+            </Grid.ColumnDefinitions>                          
             <ProgressBar Grid.Column="1" x:Name="status_progress">
 
             </ProgressBar>
+            <Image Grid.Column="1" x:Name="image_file" Source="papka.png" HorizontalAlignment="Left" />
             <Button Grid.Column="2" HorizontalAlignment="Left" Width="26"/>
-            <Button x:Name="btn_checking" Grid.Column="3" Click="Button_Click" Content=". . .">
+            <Button x:Name="btn_checking" Grid.Column="3" Click="btn_checking_Click" Content="{Binding ElementName=list_for_papki,Path=Items.Count}">
 
 
             </Button>
 
         </Grid>
 
-        <Grid Grid.Row="1">
-            <Grid.Style>
-                <Style>
-                    <Style.Triggers>
-
-                        <MultiDataTrigger>
-                            <MultiDataTrigger.Conditions>
-                                <Condition Binding="{Binding IsCheckBoxChecked}" Value="false"/>
-                            </MultiDataTrigger.Conditions>
-                            <MultiDataTrigger.EnterActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetProperty="Height"
-                                                 To="0" By="0.1" Duration="0:0:0.5"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </MultiDataTrigger.EnterActions>
-                            <MultiDataTrigger.ExitActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetProperty="Height"
-                                                To="150" By="0.5" Duration="0:0:0.5"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </MultiDataTrigger.ExitActions>
-                        </MultiDataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>
-            <StackPanel x:Name="list_for_papki" Margin="5,0,0,0" Height="auto">
+        <Grid x:Name="grid_for_papki" Grid.Row="1" Height="0">
+            <ListView x:Name="list_for_papki">
                 
-            </StackPanel>
+            </ListView>
         </Grid>
 
 
