--- a/WpfControlLibrary3/UserControl1.xaml
+++ b/WpfControlLibrary3/UserControl1.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl xmlns:WpfControlLibrary2="clr-namespace:WpfControlLibrary2;assembly=WpfControlLibrary3"  x:Class="WpfControlLibrary3.UserControl1"
+﻿<UserControl x:Class="WpfControlLibrary3.UserControl1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
