--- a/ConnectedForm/MainWindow.xaml
+++ b/ConnectedForm/MainWindow.xaml
@@ -178,7 +178,7 @@
         <Grid Grid.Row="1">
             <Button x:Name="transmit_chk" Click="transmit_chk_Click" HorizontalAlignment="Right" Width="20"  Height="20"/>
         </Grid>
-        <Grid x:Name="Gridfortransmit" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="400" Height="240" Background="Transparent">
+        <Grid x:Name="Gridfortransmit" MaxWidth="400" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="400" Height="240" Background="Transparent">
             <Grid.RowDefinitions>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
