--- a/WpfControlLibrary3/UserControl1.xaml
+++ b/WpfControlLibrary3/UserControl1.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfControlLibrary3"
              mc:Ignorable="d"              >
-    <Grid> 
+    <Grid Width="350"> 
 
         <Grid.RowDefinitions>
             <RowDefinition Height="26"/>
@@ -13,10 +13,10 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0"/>
-                <ColumnDefinition Width="174"/>
-                <ColumnDefinition Width="50"/>
-                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="0*"/>
+                <ColumnDefinition Width="17*"/>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>                          
             <ProgressBar Grid.Column="1" x:Name="status_progress">
 
