--- a/ConnectedForm/MainWindow.xaml
+++ b/ConnectedForm/MainWindow.xaml
@@ -177,18 +177,27 @@
         <Grid Grid.Row="1">
             <Button x:Name="transmit_chk" Click="transmit_chk_Click" HorizontalAlignment="Right" Width="20"  Height="20"/>
         </Grid>
-        <Grid x:Name="Gridfortransmit" MaxWidth="400" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="0" Height="0" Background="Transparent">
+        <Grid x:Name="Gridfortransmit" MaxWidth="400" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="400" Height="400" Background="Transparent">
             <Grid.RowDefinitions>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Button x:Name="ClearList_btn" Grid.Row="0" Content="Очистить" HorizontalAlignment="Left" Click="ClearList_btn_Click"/>
-            <ScrollViewer Grid.Row="1">
-                <StackPanel>
-                    <ListView x:Name="tiktak">
-                        
-                    </ListView>
-                </StackPanel>
+            
+            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
+                
+                    <StackPanel>
+                        <TreeView x:Name="tiktak">
+                            <TreeView.ItemTemplate>
+                                <HierarchicalDataTemplate ItemsSource="{Binding Items}">
+                                    <UserControl Content="{Binding flk}" />
+                                    <!--<TextBlock Text="{Binding Title}" />-->
+                                    <!--/<ProgressBar Value="{Binding StatusProgress}"/>-->
+                                </HierarchicalDataTemplate>
+                            </TreeView.ItemTemplate>
+                        </TreeView>                    
+                    </StackPanel>
+                
             </ScrollViewer>
 
 
