--- a/WpfControlLibrary2/UserControl1.xaml
+++ b/WpfControlLibrary2/UserControl1.xaml
@@ -77,8 +77,8 @@
             
             <Grid Grid.Row="1" >
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Label x:Name="label_ip_from" Grid.Column="0" HorizontalAlignment="Left" Content="{Binding Path=Ip_From}"/>
                 <Label x:Name="label_path_from" HorizontalAlignment="Left" Grid.Column="1" Content="{Binding Path=Path_From}"/>                
@@ -87,8 +87,8 @@
             <Label Grid.Row="2" Content="Куда" HorizontalAlignment="Center"/>
             <Grid Grid.Row="3" >
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Label x:Name="label_ip_to" Grid.Column="0" HorizontalAlignment="Left" Content="{Binding Path=Ip_To}"/>
                 <Label x:Name="label_path_to" Grid.Column="1" HorizontalAlignment="Left" Content="{Binding Path=Path_To}"/>
