--- a/ConnectedForm/MainWindow.xaml
+++ b/ConnectedForm/MainWindow.xaml
@@ -9,9 +9,57 @@
         xmlns:WpfControlLibrary3="clr-namespace:WpfControlLibrary3;assembly=WpfControlLibrary3"
         x:Class="ConnectedForm.MainWindow" 
         mc:Ignorable="d"
-        Title="MainWindow" WindowState="Maximized" x:Name="MainWn">
+        Title="MainWindow" WindowState="Maximized" x:Name="MainWn" >
 
     <Window.Resources>
+
+        <Style TargetType="{x:Type Grid}" x:Key="waiting_grd">
+            <Style.Triggers>
+
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding IsCheckBoxChecked_1}" Value="true"/>
+                    </MultiDataTrigger.Conditions>
+                    <MultiDataTrigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Width"
+                                                To="400" By="0.1" Duration="0:0:0.5"/>
+                                <DoubleAnimation Storyboard.TargetProperty="Height"
+                                                To="400" By="0.1" Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </MultiDataTrigger.EnterActions>
+                    <MultiDataTrigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Width"
+                                                To="0" By="5" Duration="0:0:0.5"/>
+                                <DoubleAnimation Storyboard.TargetProperty="Height"
+                                                To="0" By="5" Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </MultiDataTrigger.ExitActions>
+                </MultiDataTrigger>
+
+                <EventTrigger RoutedEvent="UIElement.MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0.3" By="1" Duration="0:0:0.1"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
+                <EventTrigger RoutedEvent="UIElement.MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" By="1" Duration="0:0:0.1"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
+            </Style.Triggers>
+        </Style>
 
         <Style TargetType="{x:Type Grid}" x:Key="grd">
             <Style.Triggers>
@@ -60,7 +108,7 @@
 
             </Style.Triggers>
         </Style>
-    </Window.Resources>
+    </Window.Resources>    
 
 
 
@@ -100,7 +148,7 @@
                             <StackPanel  x:Name="stackpanel0" Orientation="Vertical" Width="{Binding Width, ElementName=firstColumn}">
                                 <ListView  MouseDoubleClick="listUsers0_MouseDoubleClick"  x:Name="listUsers0" AllowDrop="False" Drop="listUsers0_Drop">
                                     <ListView.View>
-                                        <GridView>                                            
+                                        <GridView>
                                             <GridViewColumn Width="{Binding setWidth}" Header="Имя папки/файла" DisplayMemberBinding="{Binding nameFile}"/>
                                             <GridViewColumn Width="{Binding setWidth}" Header="Дата создания" DisplayMemberBinding="{Binding time}"/>
                                             <GridViewColumn Width="{Binding setWidth}" Header="Размер файла" DisplayMemberBinding="{Binding sizeFile}"/>
@@ -148,7 +196,7 @@
                             <StackPanel  x:Name="stackpanel1" Orientation="Vertical" Width="{Binding Width, ElementName=firstColumn}">
                                 <ListView  MouseDoubleClick="listUsers1_MouseDoubleClick"  x:Name="listUsers1" AllowDrop="False" Drop="listUsers1_Drop">
                                     <ListView.View>
-                                        <GridView >                                            
+                                        <GridView >
                                             <GridViewColumn Width="{Binding setWidth}" Header="Имя папки/файла" DisplayMemberBinding="{Binding nameFile}"/>
                                             <GridViewColumn Width="{Binding setWidth}" Header="Дата создания" DisplayMemberBinding="{Binding time}"/>
                                             <GridViewColumn  Width="{Binding setWidth}" Header="Размер файла" DisplayMemberBinding="{Binding sizeFile}"/>
@@ -175,32 +223,63 @@
             </Grid>
         </Grid>
         <Grid Grid.Row="1">
-            <Button x:Name="transmit_chk" Click="transmit_chk_Click" HorizontalAlignment="Right" Width="20"  Height="20"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="25"/>            
+            </Grid.ColumnDefinitions>            
+            <Button Grid.Column="2" x:Name="transmit_chk" Click="transmit_chk_Click" HorizontalAlignment="Right" Width="20"  Height="20"/>
+            <Button Grid.Column="1" x:Name="wait_chk" Click="wait_chk_Click" Width="20" Height="20"/>
         </Grid>
-        <Grid x:Name="Gridfortransmit" MaxWidth="400" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="400" Height="400" Background="Transparent">
+        
+        <Grid x:Name="Gridfortransmit" MaxWidth="400" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="0" Height="0" Background="Transparent">
             <Grid.RowDefinitions>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Button x:Name="ClearList_btn" Grid.Row="0" Content="Очистить" HorizontalAlignment="Left" Click="ClearList_btn_Click"/>
-            
+
             <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
-                
-                    <StackPanel>
-                        <TreeView x:Name="tiktak">
-                            <TreeView.ItemTemplate>
-                                <HierarchicalDataTemplate ItemsSource="{Binding Items}">
-                                    <UserControl Content="{Binding flk}" />
-                                    <!--<TextBlock Text="{Binding Title}" />-->
-                                    <!--/<ProgressBar Value="{Binding StatusProgress}"/>-->
-                                </HierarchicalDataTemplate>
-                            </TreeView.ItemTemplate>
-                        </TreeView>                    
-                    </StackPanel>
-                
+
+                <StackPanel>
+                    <TreeView x:Name="tiktak">
+                        <TreeView.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding Items}">
+                                <UserControl Content="{Binding flk}" />
+                                <!--<TextBlock Text="{Binding Title}" />-->
+                                <!--/<ProgressBar Value="{Binding StatusProgress}"/>-->
+                            </HierarchicalDataTemplate>
+                        </TreeView.ItemTemplate>
+                    </TreeView>
+                </StackPanel>
+
             </ScrollViewer>
 
 
+        </Grid>
+        <Grid x:Name="GridForWaiting" MaxWidth="400" Style="{StaticResource waiting_grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="0" Height="0" Background="Transparent" Margin="0,0,-41,3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Button x:Name="ClearList_btn_1" Grid.Row="0" Content="Очистить" HorizontalAlignment="Left"/>
+
+            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
+
+                <StackPanel>
+                    <TreeView x:Name="treeForWaiting">
+                        <TreeView.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding Items}">
+                                <UserControl Content="{Binding flk}"/>
+                            </HierarchicalDataTemplate>
+                        </TreeView.ItemTemplate>
+                    </TreeView>
+                </StackPanel>
+
+            </ScrollViewer>
+
+
+            
         </Grid>
     </Grid>
 </Window>
