--- a/Share Data WPF/MainWindow.xaml
+++ b/Share Data WPF/MainWindow.xaml
@@ -7,20 +7,38 @@
         xmlns:WpfControlLibrary1="clr-namespace:WpfControlLibrary1;assembly=WpfControlLibrary1" xmlns:WpfControlLibrary3="clr-namespace:WpfControlLibrary3;assembly=WpfControlLibrary3" x:Class="Share_Data_WPF.MainWindow"
         mc:Ignorable="d"
         x:Name="MainLoadWindow" Title="MainWindow" Height="500" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow">
+    <Window.Resources>
+        <!--<Style TargetType="Button" x:Key="RBtn">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="10"
+                                Background="{TemplateBinding Background}">
+
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>-->
+    </Window.Resources>
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Color="#FF12A1A8" Offset="0.802"/>
-                <GradientStop Color="#FFC4B7D1"/>
+                <GradientStop Color="#FF2A2F34" Offset="0"/>
+                <GradientStop Color="#FF0D55A6" Offset="0.703"/>
             </LinearGradientBrush>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
+
         <Button Grid.Row="1" x:Name="searchingbrn" Margin="246,0,246,50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="300" Height="50" Content="Find"
-                Click="searchingbrn_Click" Grid.ColumnSpan="2"/>
+                Click="searchingbrn_Click" Background="#FFFE5900" local:CornerRadiusSetter.CornerRadius="10,10,10,10">
+           
+        </Button>
 
 
         <Label x:Name="LabelMyIp" Grid.Row="0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,30,0,0"/>
